fix title to remove potala

--- a/404.html
+++ b/404.html
@@ -21,16 +21,16 @@
 <link rel="icon" type="image/png" href="/favicons/android-192x192.png"sizes="192x192">
 
 <title>404 Page not found | Dzong Platform</title><meta property="og:title" content="404 Page not found" />
-<meta property="og:description" content="Dzong Potala Edge Platform simplify development of AI at the edge" />
+<meta property="og:description" content="Dzong Edge Platform simplify development of AI @ the Edge" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="/404.html" />
 <meta property="og:site_name" content="Dzong Platform" />
 <meta itemprop="name" content="404 Page not found">
-<meta itemprop="description" content="Dzong Potala Edge Platform simplify development of AI at the edge">
+<meta itemprop="description" content="Dzong Edge Platform simplify development of AI @ the Edge">
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
-<meta name="twitter:description" content="Dzong Potala Edge Platform simplify development of AI at the edge"/>
+<meta name="twitter:description" content="Dzong Edge Platform simplify development of AI @ the Edge"/>
 
 
 
