--- a/about/index.html
+++ b/about/index.html
@@ -22,17 +22,17 @@
 <link rel="icon" type="image/png" href="/favicons/android-192x192.png"sizes="192x192">
 
 <title>About Dzong | Dzong Platform</title><meta property="og:title" content="About Dzong" />
-<meta property="og:description" content="Dzong Potala Edge Platform simplify development of AI at the edge" />
+<meta property="og:description" content="Dzong Edge Platform simplify development of AI @ the Edge" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="/about/" />
 <meta property="og:site_name" content="Dzong Platform" />
 <meta itemprop="name" content="About Dzong">
-<meta itemprop="description" content="Dzong Potala Edge Platform simplify development of AI at the edge">
+<meta itemprop="description" content="Dzong Edge Platform simplify development of AI @ the Edge">
 
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:image" content="/about/feature-background.jpg"/>
 <meta name="twitter:title" content="About Dzong"/>
-<meta name="twitter:description" content="Dzong Potala Edge Platform simplify development of AI at the edge"/>
+<meta name="twitter:description" content="Dzong Edge Platform simplify development of AI @ the Edge"/>
 
 
 
