fine tuning content.

--- a/about/index.html
+++ b/about/index.html
@@ -187,19 +187,19 @@ monks' accommodation.<br/>
 			<p><div class="col-12">
 <h1 class="text-center">Our Missions</h1>
 <p class="-text-dark lead mt-5 text-center">
-Artifical Intelligence is adding a new capability to software technologies
-making the &ldquo;impossible&rdquo; possible.  <br/>
-Demands for intelligent software that senses physical environment and
-operates on instant data will be ubiquitous, pushing the need for software
-to be closer to the source of actions, i.e., the <b>EDGE</b>.  <br/>
-However, software development and integration of embedded devices for
-edge computing are time consuming, resources constraint, has challenges
-that can benefit from cloud and enterprise software development practices.
-Our mission is to bridge the silo using technologies that simplify and
-streamline the edge computing development, enabling collaboration and
-cross-fuctional development, and leveraging best practices.
-Our goals contribute to rapid development of Good AI software that
-can benefit society and humanity in the next decade.
+Artifical Intelligence is adding a new capability to software, making the
+&ldquo;<em>impossible</em>&rdquo; possible.  <br/>
+Intelligent software that senses physical environment and reacts on
+instant data will be ubiquitous and becomes the norm.
+Increasing demands of intelligent software will deplete network bandwidth
+pushing the need for to be closer to the source of actions,
+i.e., the <b>EDGE</b> or Edge Computing.
+However, software development for edge computing is hard and time consuming
+because it requires integration with hardware specific embedded devices.
+Embedded engineer pool is smaller compare to enterprise or cloud software
+developers. Our mission is to simplify development of AI software for the edge,
+enabling developers to produce Good Intelligent Software that benefit
+humanity in the next decades.
 </p></p>
 
 		</div>
