refined content and replace about image

--- a/about/index.html
+++ b/about/index.html
@@ -30,7 +30,7 @@
 <meta itemprop="description" content="Dzong Edge Computing Platform simplify development of AI @ the Edge">
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="/about/feature-background.jpg"/>
+<meta name="twitter:image" content="/about/featured-background.jpg"/>
 <meta name="twitter:title" content="About Dzong"/>
 <meta name="twitter:description" content="Dzong Edge Computing Platform simplify development of AI @ the Edge"/>
 
@@ -102,6 +102,7 @@
         
 
 
+<!-- height = min, med, max or auto (the actual height of the image)-->
 
 
 
@@ -114,21 +115,20 @@
 
 
 
-
-<link rel="preload" as="image" href="/about/feature-background_hu670700188a159ebd965fa255f42f3e06_369734_960x540_fill_q75_catmullrom_bottom.jpg" media="(max-width: 1200px)">
-<link rel="preload" as="image" href="/about/feature-background_hu670700188a159ebd965fa255f42f3e06_369734_1920x1080_fill_q75_catmullrom_bottom.jpg" media="(min-width: 1200px)">
+<link rel="preload" as="image" href="/about/featured-background_hu63fad2a62a275711c16df90d02d0ccee_563321_960x540_fill_q75_catmullrom_bottom.jpg" media="(max-width: 1200px)">
+<link rel="preload" as="image" href="/about/featured-background_hu63fad2a62a275711c16df90d02d0ccee_563321_1920x1080_fill_q75_catmullrom_bottom.jpg" media="(min-width: 1200px)">
 <style>
 #td-cover-block-0 {
-    background-image: url(/about/feature-background_hu670700188a159ebd965fa255f42f3e06_369734_960x540_fill_q75_catmullrom_bottom.jpg); 
+    background-image: url(/about/featured-background_hu63fad2a62a275711c16df90d02d0ccee_563321_960x540_fill_q75_catmullrom_bottom.jpg); 
 }
 @media only screen and (min-width: 1200px) {
     #td-cover-block-0 {
-        background-image: url(/about/feature-background_hu670700188a159ebd965fa255f42f3e06_369734_1920x1080_fill_q75_catmullrom_bottom.jpg); 
+        background-image: url(/about/featured-background_hu63fad2a62a275711c16df90d02d0ccee_563321_1920x1080_fill_q75_catmullrom_bottom.jpg); 
     }
 }
 </style>
 
-<section id="td-cover-block-0" class="row td-cover-block td-cover-block--height-med js-td-cover td-overlay td-overlay--dark -bg-dark">
+<section id="td-cover-block-0" class="row td-cover-block td-cover-block--height-max js-td-cover td-overlay td-overlay--dark -bg-dark">
   <div class="container td-overlay__inner">
     <div class="row">
       <div class="col-12">
