add getting started for jetson nano; revised content;

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
   -->
   <h3 class="mb-5">Accelerate time-to-market of your AI software for the Edge</h3>
 
-    <a class="btn btn-lg btn-primary mr-3 mb-4" href="/docs/">
+    <a class="btn btn-lg btn-primary mr-3 mb-4" href="/docs/overview/">
         Learn More <i class="fas fa-arrow-alt-circle-right ml-2"></i>
     </a>
     <a class="btn btn-lg btn-secondary mr-3 mb-4" href="https://gitlab.com/potala/sln-home-monitor-rpi" target="_blank">
